# src/app/schemas/hotelSchemas.ts
@@ -1,0 +1,66 @@
+import * as Yup from 'yup';
+
+// id
+export const hotelIdSchema = Yup.object({
+    id: Yup.string()
+        .required('ID is required'),
+});
+
+// post
+export const postHotelSchema = Yup.object({
+    name: Yup.string()
+        .trim()
+        .required("Room name is required")
+        .min(3, "Name must be at least 3 characters")
+        .max(15, "Name must be at most 15 characters"),
+
+    description: Yup.string()
+        .trim()
+        .required("Room description is required")
+        .max(100, "Description must be at most 100 characters"),
+
+    images: Yup.array()
+        .required("Exactly 4 photos must be uploaded.")
+        .min(4, "Exactly 4 photos must be uploaded.")
+        .max(4, "Exactly 4 photos must be uploaded.")
+        .of(
+            Yup.mixed<File>()
+                .required("Each element in the images array must be a file.")
+                .test(
+                    'isFile',
+                    'Each element must be a valid file object.',
+                    (value) => value instanceof File
+                )
+        ),
+
+    pricePerNight: Yup.number()
+        .required("Price per night is required")
+        .min(0, "Price per night cannot be negative"),
+
+    // reservedStatus: Yup.boolean().default(false),
+
+    // startReservedTime: Yup.date()
+    //     .nullable()
+    //     .notRequired(),
+
+    // endReservedTime: Yup.date()
+    //     .nullable()
+    //     .notRequired()
+    //     .when("startReservedTime", (startReservedTime, schema) =>
+    //         startReservedTime
+    //             ? schema.min(startReservedTime, "End date cannot be before start date")
+    //             : schema
+    //     ),
+
+    // reservedBy: Yup.string()
+    //     .nullable()
+    //     .notRequired(),
+});
+
+// export const postFeedbacksMailSchema = Yup.object({
+//     fromMail: Yup.string()
+//         .trim()
+//         .email('Invalid email address')
+//         .required('Email is required'),
+// });
+
